list of allowed domains corrected

--- a/mowIt/index.html
+++ b/mowIt/index.html
@@ -111,7 +111,7 @@ window.onload = function() {
                 'www.m.coolmath-games.com', 'www.coolmathgames.com', 'www.edit.coolmathgames.com', 
                 'www.stage.coolmathgames.com', 'www.edit-stage.coolmathgames.com', 
                 'www.dev.coolmathgames.com', 'www.m.coolmathgames.com', 'www.coolmathgames.com',
-                'https://www.coolmathgames.com', 'localhost', '192.168.1.67'];
+                'https://www.coolmathgames.com', 'localhost', '192.168.1.67', 'kodedyukh.github.io'];
 
 	//console.log(window.location.hostname);
 
