--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
           </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -135,67 +132,24 @@
       <h2 class="text-center text-uppercase text-white">About</h2>
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Created in 2017, by Konstantin Dediukhin, kpded games develops HTML5 games with unconventional gameplay. The studio has developed and launched 6 games.</p>
+          <p class="lead">My name is Konstantin Dediukhin and I’m a solo game developer, working under kpded nickname. I develop HTML5 games, including programming and art.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">If you are interested in licensing my games please contact me via “Contact” section of the site. The studio struggles for high-quality of the product and development of individual art style.</p>
+          <p class="lead">I’m developing games with unconventional gameplay and unique art style. If you are interested in any sort of cooperation with me please send me an e-mail, or contact me via social media.</p>
         </div>
       </div>      
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Name</label>
-                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Email Address</label>
-                <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Phone Number</label>
-                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Message</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-            </div>
-          </form>
-        </div>
-      </div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer text-center" style="background-color: #2a3343">
     <div class="container">
-      <div class="row">        
+      <div class="row">
+        <div class="col-md-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Contacts</h4>
+          <p class="lead mb-0">If you are interested in licensing any of my games or on any other issue please contact me via
+            <br>info@kpdedgames.com</p>
+        </div>        
         <div class="col-md-4 mx-auto mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
           <ul class="list-inline mb-0">
