--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="col-md-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Contacts</h4>
           <p class="lead mb-0">If you are interested in licensing any of my games or on any other issue please contact me via
-            <br>info@kpdedgames.com</p>
+            <br>kpdedgames@gmail.com</p>
         </div>        
         <div class="col-md-4 mx-auto mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
