roloong cmg update

--- a/roloongCMG/index.html
+++ b/roloongCMG/index.html
@@ -27,21 +27,6 @@
 	<body>
 		<div id="gameContainer" class="divstyle"> </div>
 		
-		<script src="production-dependencies.bundle.js"></script>
-		<script src="app.bundle.js"></script>
-
-		<script type="text/javascript">
-
-			/*var unlockBtn = document.createElement('button');
-
-		    unlockBtn.textContent = 'unlock levels';
-
-		    document.body.appendChild(unlockBtn);
-
-		    unlockBtn.addEventListener('click', function ()
-		    {
-		        unlockAllLevels();
-		    });*/
-		</script>
+		<script src="roloong.min.js"></script>
 	</body>
 </html>
