roloong cmg debug

--- a/roloongCMG/index.html
+++ b/roloongCMG/index.html
@@ -27,6 +27,7 @@
 	<body>
 		<div id="gameContainer" class="divstyle"> </div>
 		
-		<script src="roloong.min.js"></script>
+		<script src="production-dependencies.bundle.js"></script>
+		<script src="app.bundle.js"></script>
 	</body>
 </html>
