--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
             <img class="img-fluid" src="img/portfolio/hamsternikus.png" alt="">
           </a>
         </div>
+        <div class="col-md-6 col-lg-4">
+          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-7">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fas fa-search-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/footballJuggle.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-8">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fas fa-search-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/gravityRide.png" alt="">
+          </a>
+        </div>
         
       </div>
     </div>
@@ -311,6 +331,50 @@
             <a class="btn btn-primary btn-lg rounded-pill" href="/hamsternikus/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Portfolio Modal 7 -->
+  <div class="portfolio-modal mfp-hide" id="portfolio-modal-7">
+    <div class="portfolio-modal-dialog bg-white">
+      <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+        <i class="fa fa-3x fa-times"></i>
+      </a>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="text-secondary text-uppercase mb-0">Football juggle</h2>
+            <hr class="star-dark mb-5">
+            <img class="img-fluid mb-5" src="img/portfolio/footballJuggle.png" alt="">
+            <p class="mb-5">Juggle the ball and perform amazing soccer juggling tricks. Draw a crowd around you and impress your audience. Master your skills to make more and more advanced tricks</p>
+            <a class="btn btn-primary btn-lg rounded-pill" href="/footballJuggle/index.html">
+              <i class="fa fa-close"></i>
+              Launch game</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Portfolio Modal 8 -->
+  <div class="portfolio-modal mfp-hide" id="portfolio-modal-8">
+    <div class="portfolio-modal-dialog bg-white">
+      <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+        <i class="fa fa-3x fa-times"></i>
+      </a>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="text-secondary text-uppercase mb-0">Gravity Ride</h2>
+            <hr class="star-dark mb-5">
+            <img class="img-fluid mb-5" src="img/portfolio/gravityRide.png" alt="">
+            <p class="mb-5">Juggle the ball and perform amazing soccer juggling tricks. Draw a crowd around you and impress your audience. Master your skills to make more and more advanced tricks</p>
+            <a class="btn btn-primary btn-lg rounded-pill" href="https://play.google.com/store/apps/details?id=org.test.spaceadv">
+              <i class="fa fa-close"></i>
+              Download game</a>
           </div>
         </div>
       </div>
