Garden gnome added

--- a/gnomeTimeGarden/index.html
+++ b/gnomeTimeGarden/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>Gnome of Time Garden</title>
+		<title>Gnome of Time Garden – Play it now at Coolmath-games.com</title>
 		<meta name="viewport" content="height=device-height, initial-scale=1">	
 		<link rel="manifest" href="/manifest.json">			
 		<style>
@@ -29,5 +29,7 @@
 		
 		<script src="production-dependencies.bundle.js"></script>
 		<script src="app.bundle.js"></script>
+		<script type="text/javascript">
+		</script>
 	</body>
 </html>
