--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/executionersInsomnia.png" alt="">
+            <img class="img-fluid" src="img/portfolio/timeGardenGnome.png" alt="">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -214,11 +214,11 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Executioner's insomnia</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Gnome of Time Garden</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="img/portfolio/executionersInsomnia.png" alt="">
-            <p class="mb-5">Being a tool of society justice, an executioner did his job for many years. Now he can't get sleep because souls of his his victims don't let him. Help him to bury all the unrest souls. The game is a sokoban with a bit of time travel mechanics</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/execInsomnia/index.html">
+            <img class="img-fluid mb-5" src="img/portfolio/timeGardenGnome.png" alt="">
+            <p class="mb-5">Help garden gnome to plant flowers in a mysterious Time Garden. Where you can travel back in time</p>
+            <a class="btn btn-primary btn-lg rounded-pill" href="/gnomeTimeGarden/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
           </div>
