- game links update

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/timeGardenGnome.png" alt="">
             <p class="mb-5">Help garden gnome to plant flowers in a mysterious Time Garden. Where you can travel back in time</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/gnomeTimeGarden/index.html">
+            <a class="btn btn-primary btn-lg rounded-pill" href="/kpdedsite/gnomeTimeGarden/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
           </div>
@@ -240,7 +240,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/roloong.png" alt="">
             <p class="mb-5">A puzzle game about  rotation and gravity. Help Roloong, a dragon with magic ability to rotate the world, to eat all the minerals on level</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/roloong/index.html">
+            <a class="btn btn-primary btn-lg rounded-pill" href="/kpdedsite/roloong/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
           </div>
@@ -262,7 +262,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/rocketateNext.png" alt="">
             <p class="mb-5">Rotate the maze and run through it, while moving wood boxes and planks. Avoid electric cables, boxes and moving electric boxes. Use your fuel wisely. Get through 60 levels with increasing difficulty</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/rocketateNext/index.html">
+            <a class="btn btn-primary btn-lg rounded-pill" href="/kpdedsite/rocketateNext/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
           </div>
@@ -284,7 +284,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/rocketate.png" alt="">
             <p class="mb-5">Rotate the world and use your jetpack to get to the finish. Move wood boxes and sticks, avoid electric cables. Use your fuel wisely</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/rocketate/index.html">
+            <a class="btn btn-primary btn-lg rounded-pill" href="/kpdedsite/rocketate/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
           </div>
@@ -306,7 +306,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/mowIt.png" alt="">
             <p class="mb-5">Mow all the lawns without crossing electric cable of your lawn mower. Sounds easy, right? But what about controlling two mowers at the same time? Welcome to the ultimate lawn mowing challenge!</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/mowIt/index.html">
+            <a class="btn btn-primary btn-lg rounded-pill" href="/kpdedsite/mowIt/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
           </div>
@@ -328,7 +328,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/hamsternikus.png" alt="">
             <p class="mb-5">Mind relocation experiment went completely wrong – a scientist is trapped inside a hamster’s body. Help science and save this hapless fellow! Take control of a hamster and help it go through 100 levels of mazes with movable walls, portal brainteasers and (spoiler alert) even extraterrestrial threat</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/hamsternikus/index.html">
+            <a class="btn btn-primary btn-lg rounded-pill" href="/kpdedsite/hamsternikus/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
           </div>
@@ -350,7 +350,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/footballJuggle.png" alt="">
             <p class="mb-5">Juggle the ball and perform amazing soccer juggling tricks. Draw a crowd around you and impress your audience. Master your skills to make more and more advanced tricks</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/footballJuggle/index.html">
+            <a class="btn btn-primary btn-lg rounded-pill" href="/kpdedsite/footballJuggle/index.html">
               <i class="fa fa-close"></i>
               Launch game</a>
           </div>
